--- a/kafka-experiment/pom.xml
+++ b/kafka-experiment/pom.xml
@@ -53,6 +53,11 @@
 			<artifactId>logback-classic</artifactId>
 			<version>1.1.7</version>
 		</dependency>
+		<dependency>
+			<groupId>com.alibaba</groupId>
+			<artifactId>fastjson</artifactId>
+			<version>2.0.51</version>
+		</dependency>
 	</dependencies>
 
 </project>
